<resources>
    <string name="app_name">OpenAuth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_not_account">Don\'t have an account? <u><b>Sign up</b></u> </string>
    <string name="email_empty">Email field is empty</string>
    <string name="password_empty">Password field is empty</string>
    <string name="email_invalid">Please enter a valid email</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="wrong_credentials">"Wrong email or password "</string>
    <string name="server_error">Server error. Please try again later</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="set_bigger_password">Password must contain at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords are not the same</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_format">mm/dd/yy</string>
    <string name="field_required">This field is required</string>
    <string name="user_exists">A user with this email already exists</string>
    <string name="logout">Logout</string>
    <string name="my_courses_title">My Courses</string>
    <string name="all_courses_title">All Courses</string>
    <string name="search_course">Search course</string>
    <string name="course_details_transition_name">course_detail_transition</string>
    <string name="description_string">Description</string>
    <string name="enroll_string">Enroll</string>
    <string name="enrolled_to_course">You enrolled to %1$s</string>
    <string name="already_enrolled">You have already enrolled to this course</string>
    <string name="upload_a_profile_image">Upload a profile image… (Up to: 2MB)</string>
    <string name="menu_profile">My Profile</string>
    <string name="write_files_permission_required">Files permission is required to pick a profile image</string>
    <string name="save">Save</string>
    <string name="error_fetching_image_from_gallery">Error fetching image from gallery</string>
    <string name="error_to_identify_user">Could not identify user</string>
    <string name="have_to_enroll_to_course">You have to enroll to course in order to have access to it\'s contents</string>
    <string name="no_contents_for_this_course_yet">No contents for this course yet!</string>

</resources>