<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.woodymats.openauth.ui.home.HomeFragmentViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/coursesSearchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="4dp"
                android:hint="@string/search_course"
                android:imeOptions="actionSearch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/myCoursesLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                showOnlyWhenEmpty="@{viewModel.enrollments}"
                app:layout_constraintTop_toBottomOf="@id/coursesSearchBar"
                app:layout_constraintStart_toStartOf="@+id/coursesSearchBar"
                app:layout_constraintEnd_toEndOf="@+id/coursesSearchBar">

                <TextView
                    android:id="@+id/myCoursesTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/my_courses_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableEndCompat="@drawable/arrow_forward" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/myCoursesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    enrollmentData="@{viewModel.enrollments}"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/allCoursesLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                showOnlyWhenEmpty="@{viewModel.courses}"
                app:layout_constraintTop_toBottomOf="@id/myCoursesLinear"
                app:layout_constraintStart_toStartOf="@+id/myCoursesLinear"
                app:layout_constraintEnd_toEndOf="@+id/myCoursesLinear"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/allCoursesTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="@string/all_courses_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableEndCompat="@drawable/arrow_forward" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/allCoursesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    coursesData="@{viewModel.courses}"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>