<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.woodymats.openauth.ui.signup.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.signup.SignUpActivity">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                loadingInProcess="@{safeUnbox(viewModel.showLoading)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fistNameEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoImageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fistNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:addTextChangedListener="@{viewModel.firstNameTextWatcher}"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/last_name"
                app:layout_constraintEnd_toEndOf="@+id/fistNameEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/fistNameEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/fistNameEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:addTextChangedListener="@{viewModel.lastNameTextWatcher}"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:addTextChangedListener="@{viewModel.emailTextWatcher}"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:addTextChangedListener="@{viewModel.passwordTextWatcher}"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:addTextChangedListener="@{viewModel.confirmPasswordTextWatcher}"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/spinnersLinear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout">

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:textAllCaps="true"
                android:text="@string/sign_up"
                android:onClick="@{viewModel::onSignUpClicked}"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
                app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
                app:layout_constraintTop_toBottomOf="@id/spinnersLinear" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>